WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51177
IndexedDB: Fix IDBDatabaseError code offset bug
https://bugs.webkit.org/show_bug.cgi?id=51177
Summary
IndexedDB: Fix IDBDatabaseError code offset bug
Hans Wennborg
Reported
2010-12-16 04:50:33 PST
IndexedDB: Fix IDBDatabaseError code offset bug
Attachments
Patch
(3.85 KB, patch)
2010-12-16 05:03 PST
,
Hans Wennborg
jorlow
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hans Wennborg
Comment 1
2010-12-16 05:03:34 PST
Created
attachment 76752
[details]
Patch
Jeremy Orlow
Comment 2
2010-12-16 05:12:04 PST
Comment on
attachment 76752
[details]
Patch r=me
Hans Wennborg
Comment 3
2010-12-16 06:55:48 PST
Committed
r74188
: <
http://trac.webkit.org/changeset/74188
>
WebKit Review Bot
Comment 4
2010-12-16 15:38:45 PST
http://trac.webkit.org/changeset/74188
might have broken Leopard Intel Debug (Tests)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug